# mindist

./: .gitignore  LICENSE  README.md  meson.build  pyproject.toml  setup.cfg  setup.py
lib/: __init__.py  contacts_PBC_grid_trajectory.f90  contacts_PBC_grid_utils.f90  mindist.f90  mindist_PBC.f90  mindist_PBC_grid.f90  mindist_PBC_grid_utils.f90  mindist_PBC_trajectory.f90  mindist_PBC_utils.f90  mindist_grid.f90  mindist_grid_utils.f90  mindist_trajectory.f90  stdlib_sorting_sort_index_real.f90
src/: __init__.py  contacts.py  mindist.py
tests/: test.py  test_nogpu.py
