

[build-system]
requires      = ["meson-python", "numpy>=2"]
build-backend = "mesonpy"

[project]
name            = "mindist"
authors         = [
    {name = "Santeri Paajanen", email = "santeri.e.paajanen@helsinki.fi"}
]
requires-python = ">=3.8"
version         = "0.0.5"
description     = "Minimum distance calculations for MD data"
readme          = "README.md"
license         = "MIT"
license-files   = ["LICENSE"]
classifiers     = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Fortran",
    "Operating System :: OS Independent",
]
dependencies    = ["numpy>=2"]

[project.optional-dependencies]
cu12 = [
    "numba-cuda[cu12]"
]
cu13 = [
    "numba-cuda[cu13]"
]