
[metadata]
name         = mindist
version      = 0.0.1
author       = Santeri Paajanen
author_email = santeri.e.paajanen@helsinki.fi
description  = Minimum distance calculations for MD data
long_description = file: README.md
license = MIT
license_files = LICENSE
classifiers  = 
    Programming Language :: Python :: 3
    Programming Language :: Fortran
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
dependencies = 
    numpy
    numba

[options]
package_dir =
    mindist = src
python_requires = >=3.7
install_requires =
    numpy>=1.21

